--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+P1RasterBase2016/resources/.tri2.obj.swp
 .tiny_obj_loader.h.swp
 .main.cpp.swp
 P1RasterBase2016/resources/.tri.obj.swp
 .DS_Store
 	.Triangle.cpp.swp
 	.Triangle.h.swp
+../resources/.tri2.obj.swp
